Fix folder structure and update gitignore

--- a/notebook/experiment.ipynb
+++ b/notebook/experiment.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "95fe721e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "84e2f1d7",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "03e0ce47",
    "metadata": {},
    "outputs": [],
@@ -67,6 +67,27 @@
    ],
    "source": [
     "llm.invoke(\"Hello, world!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c345a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AIMessage(content='Hey there! How can I help you today?', additional_kwargs={'reasoning_content': 'The user just says \"Hey\". We need to respond appropriately. No policy violation. We can greet back and ask how we can help.'}, response_metadata={'token_usage': {'completion_tokens': 48, 'prompt_tokens': 72, 'total_tokens': 120, 'completion_time': 0.108931635, 'completion_tokens_details': {'reasoning_tokens': 29}, 'prompt_time': 0.003083923, 'prompt_tokens_details': None, 'queue_time': 0.049654762, 'total_time': 0.112015558}, 'model_name': 'openai/gpt-oss-120b', 'system_fingerprint': 'fp_e10890e4b9', 'service_tier': 'on_demand', 'finish_reason': 'stop', 'logprobs': None, 'model_provider': 'groq'}, id='lc_run--813e848d-8b5f-4b3c-8c4d-eb21fb0fa4ec-0', usage_metadata={'input_tokens': 72, 'output_tokens': 48, 'total_tokens': 120, 'output_token_details': {'reasoning': 29}})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm.invoke(\"Hey\")"
    ]
   }
  ],
